--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: jousefor
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: jousefor
   template:
     metadata:
       labels:
-        app: ray
+        app: jousefor
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/jousefor:latest
+        name: jousefor
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "317b590f-1415-4a0b-906e-fb1e00465e07"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/v8l555"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "317b590f-1415-4a0b-906e-fb1e00465e07"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm3866"
         - name: Share_Path
           value: "/v2link"
